--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.23.0",
     "yarn": "^1.22.19"
   }
 }
